@@ -10,6 +10,7 @@ Improvements
 Bugfixes
 --------
 - avoid an assert() error in stash_rrset() (!1072)
+- map() command now uses control sockets and works with systemd integration (!1000)
 
 
 Knot Resolver 5.1.3 (2020-09-08)
